Fix HTTP server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
     command: go run ./src/main.go &
     ports:
       - 8083:8083
+networks:
+  default:
+    external:
+      name: pentago-symfony_default
